--- a/core/config.cmake.h.in
+++ b/core/config.cmake.h.in
@@ -26,6 +26,9 @@
 
 #define UMFPACK_FOUND @UMFPACK_FOUND@
 
+#define EIGEN3_FOUND @EIGEN3_FOUND@
+#define USE_EIGEN3 @USE_EIGEN3@
+
 #define OPENBLAS_FOUND @OPENBLAS_FOUND@
 #define OPENBLAS_CBLAS_FOUND @OPENBLAS_CBLAS_FOUND@
 
