--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@
 pyplusplus==1.8.4
 
 # for py3.8
-pygccxml==2.0.0 
+pygccxml==2.0.0
 sphinx==1.8.5
 sphinxcontrib-bibtex
 sphinxcontrib-programoutput
@@ -15,3 +15,13 @@ sphinxcontrib-doxylink
 sphinx-gallery
 bibtexparser
 pyvista==0.24.2
+
+# optional, but strongly recommended
+scipy
+
+# useful
+ipython
+
+# for testing
+pytest
+
