improved local boost_python build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -212,7 +212,7 @@ function(find_boost_from_distname_file)
     message(STATUS "locking for ${BOOST_DIST_NAME_FILE}")
 
     if (EXISTS ${BOOST_DIST_NAME_FILE})
-        message(STATUS "reading ${BOOST_DIST_NAME_FILE}")
+        message(STATUS "Found: ${BOOST_DIST_NAME_FILE}")
         FILE(READ "${EXTERNAL_DIR}/.boost-py${Python_VERSION_MAJOR}.dist" BOOST_DIST_NAME)
         STRING(REGEX REPLACE "\n" "" BOOST_DIST_NAME "${BOOST_DIST_NAME}")
         get_filename_component(BOOST_ROOT "${EXTERNAL_DIR}/${BOOST_DIST_NAME}" ABSOLUTE)
@@ -245,9 +245,11 @@ if (NOT Boost_INCLUDE_DIR)
     else()
         message(STATUS "no boost root .. building local")
         if (NOT Boost_INCLUDE_DIR)
-            #find_or_build_package(Boost boost)
+            find_boost_from_distname_file()
+            find_or_build_package(Boost boost)
             find_boost_from_distname_file()
         else()
+            find_boost_from_distname_file()
             find_or_build_package_check(Boost boost Boost_INCLUDE_DIR False)
             find_boost_from_distname_file()
         endif()
