--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
   - defaults
   - gimli
 dependencies:
-  - pgcore >= 1.2.2
+  - pgcore >= 1.2.4
   - matplotlib
   - jupyter
   - sphinx >= 1.8.5
@@ -22,3 +22,4 @@ dependencies:
   - bibtexparser
   - pyvista=0.24
   - meshio
+  - tetgen
