Add jupyter backend to showMesh3D
- Update pyvista version in requirements from 0.24 to 0.33
- Add panel as a jupyter backend to requirements and environment.yml
- Add panel to vistaview

--- a/environment.yml
+++ b/environment.yml
@@ -20,6 +20,7 @@ dependencies:
   - sphinxcontrib-doxylink
   - scipy
   - bibtexparser
-  - pyvista=0.24
+  - pyvista=0.33
   - meshio
   - tetgen
+  - panel
